--- a/src/FrpClient/FrpClient.UI/Resources/layout/activity_main.xml
+++ b/src/FrpClient/FrpClient.UI/Resources/layout/activity_main.xml
@@ -1,89 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?android:attr/windowBackground"
+    android:columnCount="3"
+    android:rowCount="5">
 
-    <GridLayout
-        android:id="@+id/gridLayout1"
-        android:layout_width="match_parent"
-        android:background="?android:attr/windowBackground"
-        android:columnCount="3"
-        android:rowCount="5"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_column="0"
-            android:layout_row="0"
-            android:id="@+id/configTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_frpType" />
-        <RadioGroup
-            android:layout_row="0"
-            android:layout_columnSpan="2"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
-            <RadioButton
-                android:id="@+id/frpsType"
-                android:text="@string/frpsType"
-                android:checked="false"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <RadioButton
-                android:id="@+id/frpcType"
-                android:checked="true"
-                android:text="@string/frpcType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RadioGroup>
-        <EditText
-            android:layout_row="1"
-            android:layout_columnSpan="3"
-            android:id="@+id/editTextForConfig"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:inputType="textMultiLine" />
-        <Button
-            android:layout_row="2"
-            android:layout_columnSpan="3"
-            android:id="@+id/buttonStart"
-            android:text="@string/start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:layout_row="3"
-            android:layout_columnSpan="3"
-            android:text="@string/stop"
-            android:id="@+id/buttonStop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <EditText
-            android:layout_row="4"
-            android:layout_columnSpan="3"
-            android:id="@+id/logs"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:inputType="textMultiLine" />
-    </GridLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
+    <TextView
+        android:layout_column="0"
+        android:layout_row="0"
+        android:id="@+id/configTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/navigation" />
-
-</RelativeLayout>
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="21.0dp"
+        android:text="@string/title_frpType"
+        android:textStyle="bold" />
+    <RadioGroup
+        android:layout_row="0"
+        android:layout_columnSpan="2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
+        <RadioButton
+            android:id="@+id/frpsType"
+            android:text="@string/frpsType"
+            android:checked="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/frpcType"
+            android:checked="true"
+            android:text="@string/frpcType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RadioGroup>
+    <EditText
+        android:layout_row="1"
+        android:layout_columnSpan="3"
+        android:id="@+id/editTextForConfig"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:inputType="textMultiLine"
+        android:gravity="top"/>
+    <Button
+        android:layout_row="2"
+        android:layout_columnSpan="3"
+        android:id="@+id/buttonStart"
+        android:text="@string/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_row="3"
+        android:layout_columnSpan="3"
+        android:text="@string/stop"
+        android:id="@+id/buttonStop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:layout_row="4"
+        android:layout_columnSpan="3"
+        android:id="@+id/logs"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:inputType="textMultiLine"
+        android:gravity="top"
+        android:enabled="false"/>
+</GridLayout>
