--- a/src/FrpClient/FrpClient.UI/Resources/layout/activity_main.xml
+++ b/src/FrpClient/FrpClient.UI/Resources/layout/activity_main.xml
@@ -8,14 +8,14 @@
     android:layout_height="match_parent"
     android:background="?android:attr/windowBackground"
     android:columnCount="3"
-    android:rowCount="5">
+    android:rowCount="4">
 
     <TextView
         android:layout_column="0"
         android:layout_row="0"
         android:id="@+id/configTitle"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="21.0dp"
@@ -23,9 +23,9 @@
         android:textStyle="bold" />
     <RadioGroup
         android:layout_row="0"
-        android:layout_columnSpan="2"
+        android:layout_column="1"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
@@ -44,12 +44,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RadioGroup>
+    <TextView
+        android:layout_row="0"
+        android:layout_column="2"
+        android:id="@+id/status"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="21.0dp"
+        android:text="@string/stop"
+        android:textStyle="bold" />
     <EditText
         android:layout_row="1"
         android:layout_columnSpan="3"
         android:id="@+id/editTextForConfig"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill"
         android:inputType="textMultiLine"
         android:gravity="top"/>
     <Button
@@ -65,14 +77,6 @@
         android:text="@string/stop"
         android:id="@+id/buttonStop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:layout_row="4"
-        android:layout_columnSpan="3"
-        android:id="@+id/logs"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:inputType="textMultiLine"
-        android:gravity="top"
+        android:layout_height="wrap_content"
         android:enabled="false"/>
 </GridLayout>
