--- a/src/Components/Pages/About.razor
+++ b/src/Components/Pages/About.razor
@@ -2,5 +2,5 @@
 
 <h3>About</h3>
 <p>
-    ÏîÄ¿Ö÷Ò³: <a href="https://github.com/qiuhaotc/frp_android" target="_blank">https://github.com/qiuhaotc/frp_android</a>
+    é¡¹ç›®ä¸»é¡µ: <a href="https://github.com/qiuhaotc/frp_android" target="_blank">https://github.com/qiuhaotc/frp_android</a>
 </p>
